tutorial - work in progress

--- a/blog/src/data/blog/php-docker-development-environment.mdx
+++ b/blog/src/data/blog/php-docker-development-environment.mdx
@@ -803,6 +803,8 @@ It's important to implement a common set of commands across projects to ease und
 I like to use commands like: build, clean, start, stop, deploy, test, all. 
 Because are concise and self descriptive, besides being some of them pretty common across other projects I've seen in the wild.
 
+<br/>
+
 #### The README.md
 
 Always remember to wrap your environment with a high level docummentation, so those who have to work with it, can move faster without depending on you.  
@@ -815,14 +817,15 @@ It also helps to spread the knowledge about the product, which is something very
 
 ### Final thoughts
 
-I hope this first tutorial has been useful to you! Hopefully, you learned what's Docker, and how can it help you and your team.  
-There is still a lot to learn though. This is a single container environment and it's not suitable for production. 
-But it's the corner stone, to modernize processes and stimulate more enjoyable, collaboratively ways of building software together.
+I hope this first tutorial has been useful to you!  
+Hopefully, you learned enough about Docker to build your own development environments.  
+There is still more to learn though. This is a single container environment and it's not suitable for production. 
+But it's the corner stone to modernize processes and stimulate more enjoyable, collaborative ways, of building software together.
 
 <br/>
 
 I did my best to guide you through this introductory exploration of Docker concepts, and a few use cases.
-Above all, I tried to share a few technical tricks to improve collaboration and communication between devs in a team, and between devs and ops teams.
+Above all, I tried to share a few technical tricks to improve collaboration and communication.
 
 <br/>
 
